@@ -28,7 +28,7 @@
 
 namespace Rcpp{
 	
-	GenericVector::GenericVector(SEXP x) throw(not_compatible) : RObject() {
+	GenericVector::GenericVector(SEXP x) throw(not_compatible) : VectorBase() {
 		switch( TYPEOF( x ) ){
 			case VECSXP:
 				setSEXP( x ) ;
@@ -46,12 +46,12 @@ namespace Rcpp{
 		}
 	}
 	
-	GenericVector::GenericVector(int size) : RObject() {
+	GenericVector::GenericVector(int size) : VectorBase() {
 		setSEXP( Rf_allocVector(VECSXP, size) ) ;
 	}
 
 #ifdef HAS_INIT_LISTS
-	GenericVector::GenericVector( std::initializer_list<RObject> list ) {
+GenericVector::GenericVector( std::initializer_list<RObject> list ) : VectorBase() {
 		SEXP x = PROTECT( Rf_allocVector( VECSXP, list.size() ) ) ;
 		const RObject* p = list.begin() ;
 		for( size_t i=0; i<list.size() ; i++, p++){
@@ -61,14 +61,6 @@ namespace Rcpp{
 		UNPROTECT( 1 ); /* x */
 	}
 #endif
-
-// SEXP* GenericVector::begin(){
-// 	return RCPP_VECTOR_PTR(m_sexp) ;
-// }
-// 
-// SEXP* GenericVector::end(){
-// 	return RCPP_VECTOR_PTR(m_sexp) + LENGTH(m_sexp) ;
-// }
 
 /* proxy stuff */
 
