@@ -25,6 +25,7 @@
 #include <RcppCommon.h>
 #include <Rcpp/RObject.h>
 #include <Rcpp/Environment.h>
+#include <Rcpp/VectorBase.h>
 
 #ifdef HAS_INIT_LISTS
 #include <initializer_list>
@@ -33,7 +34,7 @@
 
 namespace Rcpp{ 
 
-class GenericVector : public RObject {     
+class GenericVector : public VectorBase {     
 public:
 
 	/* much inspired from item 30 of more effective C++ */
@@ -67,19 +68,6 @@ public:
 #ifdef HAS_INIT_LISTS	
 	GenericVector( std::initializer_list<RObject> list ) ;
 #endif
-	
-	/**
-	 * the length of the vector, uses Rf_length
-	 */
-	inline int length() const { return Rf_length( m_sexp ) ; }
-	
-	/**
-	 * alias of length
-	 */
-	inline int size() const { return Rf_length( m_sexp ) ; }
-	
-	// SEXP* begin(); 
-	// SEXP* end() ;
 	
 	const Proxy operator[]( int i ) const throw(index_out_of_bounds);
 	Proxy operator[]( int i ) throw(index_out_of_bounds) ;
